--- a/wxsmith/wx_MainFrame.wxs
+++ b/wxsmith/wx_MainFrame.wxs
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <wxsmith>
 	<object class="wxFrame" name="wx_MainFrame">
+		<title>MainFrame</title>
 		<icon stock_id="wxART_TIP" />
 		<size>626,293</size>
 		<bg>wxSYS_COLOUR_BTNFACE</bg>
 		<id_arg>0</id_arg>
-		<handler function="skip_leftdown" entry="EVT_LEFT_DOWN" />
 		<object class="wxFlexGridSizer" variable="FlexGridSizer1" member="yes">
 			<cols>1</cols>
 			<rows>2</rows>
